@@ -4,27 +4,40 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.regex.Pattern;
 
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.io.ClassPathResource;
-import org.springframework.core.io.FileSystemResource;
-import org.springframework.core.io.Resource;
-import org.springframework.http.CacheControl;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.util.HtmlUtils;
-import org.springframework.web.util.JavaScriptUtils;
+import org.eclipse.microprofile.config.inject.ConfigProperty;
 
 import jakarta.annotation.PostConstruct;
-import jakarta.servlet.http.HttpServletRequest;
+import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.core.CacheControl;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
 
 import stirling.software.common.configuration.InstallationPathConfig;
+import stirling.software.common.model.io.ClassPathResource;
+import stirling.software.common.model.io.FileSystemResource;
+import stirling.software.common.model.io.Resource;
 
-@Controller
+// NOTE: SPA forwarding controller. The forwarding routes below cover the SPA "clean URL" paths the
+// app historically matched with Spring's negative-lookahead regex route. RESTEasy Reactive DOES
+// support per-segment regex constraints in @Path templates, so each catch-all segment is
+// constrained to {seg:[^/.]+} - one path segment that contains no '.'. This mirrors Spring's
+// "match only dot-less segments" rule: requests for real files (which always carry an extension,
+// e.g. /assets/index-abc.js, /sw.js, /manifest.json) do NOT match these templates and therefore
+// fall through to Quarkus' static-resource handler (META-INF/resources), which serves them with the
+// correct Content-Type. This precedence detail is critical: a matching JAX-RS route is answered
+// BEFORE the static handler runs, so an unconstrained {path} catch-all would shadow every asset and
+// return index.html (text/html) for .js/.css - exactly the "white screen / wrong MIME" bug. Only
+// single- and two-segment SPA routes are matched here; a deeper dot-less SPA route would need an
+// explicit template or a low-priority Vert.x fallback route (none currently required).
+@Path("")
+@ApplicationScoped
 public class ReactRoutingController {
 
     private static final org.slf4j.Logger log =
@@ -32,8 +45,13 @@ public class ReactRoutingController {
     private static final Pattern BASE_HREF_PATTERN =
             Pattern.compile("<base href=\\\"[^\\\"]*\\\"\\s*/?>");
 
-    @Value("${server.servlet.context-path:/}")
-    private String contextPath;
+    // server.servlet.context-path has no direct Quarkus equivalent (it maps to
+    // quarkus.http.root-path
+    // at build time). Kept as a configurable property so the index.html base href rewrite still
+    // works.
+    // TODO: Migration required - consider sourcing this from quarkus.http.root-path instead.
+    @ConfigProperty(name = "server.servlet.context-path", defaultValue = "/")
+    String contextPath;
 
     private String cachedIndexHtml;
     private String cachedCallbackHtml;
@@ -65,7 +83,8 @@ public class ReactRoutingController {
         }
 
         // Check for external index.html first (customFiles/static/)
-        Path externalIndexPath = Path.of(InstallationPathConfig.getStaticPath(), "index.html");
+        java.nio.file.Path externalIndexPath =
+                Paths.get(InstallationPathConfig.getStaticPath(), "index.html");
         log.debug("Checking for custom index.html at: {}", externalIndexPath);
         if (Files.exists(externalIndexPath) && Files.isReadable(externalIndexPath)) {
             log.info("Using custom index.html from: {}", externalIndexPath);
@@ -135,7 +154,8 @@ public class ReactRoutingController {
 
     private Resource getIndexHtmlResource() {
         // Check external location first
-        Path externalIndexPath = Path.of(InstallationPathConfig.getStaticPath(), "index.html");
+        java.nio.file.Path externalIndexPath =
+                Paths.get(InstallationPathConfig.getStaticPath(), "index.html");
         if (Files.exists(externalIndexPath) && Files.isReadable(externalIndexPath)) {
             return new FileSystemResource(externalIndexPath.toFile());
         }
@@ -144,85 +164,122 @@ public class ReactRoutingController {
         return new ClassPathResource("static/index.html");
     }
 
-    @GetMapping(
-            value = {"/", "/index.html"},
-            produces = MediaType.TEXT_HTML_VALUE)
-    public ResponseEntity<String> serveRootPage(HttpServletRequest request) {
+    @GET
+    @Path("/")
+    @Produces(MediaType.TEXT_HTML)
+    public Response serveRootPage() {
         // Swap ONLY the root page for SaaS. SPA entry points that delegate to serveIndexHtml
         // (/auth/callback, /share/{token}, forwarded routes) keep serving the normal shell.
         if (saasLandingExists && cachedSaasLandingHtml != null) {
-            return ResponseEntity.ok()
-                    .cacheControl(CacheControl.noCache().mustRevalidate())
-                    .contentType(MediaType.TEXT_HTML)
-                    .body(cachedSaasLandingHtml);
+            return Response.ok(cachedSaasLandingHtml)
+                    .cacheControl(noCacheMustRevalidate())
+                    .type(MediaType.TEXT_HTML)
+                    .build();
         }
-        return serveIndexHtml(request);
+        return serveIndexHtml();
     }
 
-    public ResponseEntity<String> serveIndexHtml(HttpServletRequest request) {
+    @GET
+    @Path("/index.html")
+    @Produces(MediaType.TEXT_HTML)
+    public Response serveIndexHtmlPage() {
+        if (saasLandingExists && cachedSaasLandingHtml != null) {
+            return Response.ok(cachedSaasLandingHtml)
+                    .cacheControl(noCacheMustRevalidate())
+                    .type(MediaType.TEXT_HTML)
+                    .build();
+        }
+        return serveIndexHtml();
+    }
+
+    public Response serveIndexHtml() {
         try {
             if (indexHtmlExists && cachedIndexHtml != null) {
-                return ResponseEntity.ok()
-                        .cacheControl(CacheControl.noCache().mustRevalidate())
-                        .contentType(MediaType.TEXT_HTML)
-                        .body(cachedIndexHtml);
+                return Response.ok(cachedIndexHtml)
+                        .cacheControl(noCacheMustRevalidate())
+                        .type(MediaType.TEXT_HTML)
+                        .build();
             }
             // Fallback: process on each request (dev mode or cache failed)
-            return ResponseEntity.ok()
-                    .cacheControl(CacheControl.noCache().mustRevalidate())
-                    .contentType(MediaType.TEXT_HTML)
-                    .body(processIndexHtml());
+            return Response.ok(processIndexHtml())
+                    .cacheControl(noCacheMustRevalidate())
+                    .type(MediaType.TEXT_HTML)
+                    .build();
         } catch (Exception ex) {
             log.error("Failed to serve index.html, returning fallback", ex);
-            return ResponseEntity.ok()
-                    .cacheControl(CacheControl.noCache().mustRevalidate())
-                    .contentType(MediaType.TEXT_HTML)
-                    .body(buildFallbackHtml());
+            return Response.ok(buildFallbackHtml())
+                    .cacheControl(noCacheMustRevalidate())
+                    .type(MediaType.TEXT_HTML)
+                    .build();
         }
     }
 
-    @GetMapping(value = "/auth/callback", produces = MediaType.TEXT_HTML_VALUE)
-    public ResponseEntity<String> serveAuthCallback(HttpServletRequest request) {
-        return serveIndexHtml(request);
+    private static CacheControl noCacheMustRevalidate() {
+        CacheControl cc = new CacheControl();
+        cc.setNoCache(true);
+        cc.setMustRevalidate(true);
+        return cc;
     }
 
-    @GetMapping(value = "/share/{token}", produces = MediaType.TEXT_HTML_VALUE)
-    public ResponseEntity<String> serveShareLinkPage(HttpServletRequest request) {
-        return serveIndexHtml(request);
+    @GET
+    @Path("/auth/callback")
+    @Produces(MediaType.TEXT_HTML)
+    public Response serveAuthCallback() {
+        return serveIndexHtml();
     }
 
-    @GetMapping(value = "/auth/callback/tauri", produces = MediaType.TEXT_HTML_VALUE)
-    public ResponseEntity<String> serveTauriAuthCallback(HttpServletRequest request) {
+    @GET
+    @Path("/share/{token}")
+    @Produces(MediaType.TEXT_HTML)
+    public Response serveShareLinkPage(@PathParam("token") String token) {
+        return serveIndexHtml();
+    }
+
+    @GET
+    @Path("/auth/callback/tauri")
+    @Produces(MediaType.TEXT_HTML)
+    public Response serveTauriAuthCallback() {
         // cachedCallbackHtml is always initialized in @PostConstruct
-        return ResponseEntity.ok().contentType(MediaType.TEXT_HTML).body(cachedCallbackHtml);
+        return Response.ok(cachedCallbackHtml).type(MediaType.TEXT_HTML).build();
     }
 
     // `files` was historically a backend static-asset directory and was therefore
     // in the exclusion list - removing it lets /files and /files/<folder-uuid>
     // forward to the SPA index.html, which is what FileManagerView expects.
-    // (Real storage endpoints live under /api/v1/storage/files, already
-    // excluded by the leading `api` token in the same regex.)
-    @GetMapping(
-            "/{path:^(?!api|static|robots\\.txt|favicon\\.ico|manifest.*\\.json|pipeline|pdfjs|pdfjs-legacy|pdfium|vendor|fonts|images|css|js|assets|locales|modern-logo|classic-logo|Login|og_images|samples)[^\\.]*$}")
-    public ResponseEntity<String> forwardRootPaths(HttpServletRequest request) throws IOException {
-        return serveIndexHtml(request);
+    // (Real storage endpoints live under /api/v1/storage/files, matched by their own JAX-RS
+    // resources which take precedence over this catch-all.)
+    //
+    // The {path:[^/.]+} constraint matches a single dot-less segment, mirroring the original Spring
+    // route's "no '.'" rule. Dot-bearing paths (real static files such as /favicon.ico,
+    // /manifest.json, /sw.js) do not match and fall through to the static-resource handler.
+    @GET
+    @Path("/{path:[^/.]+}")
+    @Produces(MediaType.TEXT_HTML)
+    public Response forwardRootPaths(@PathParam("path") String path) throws IOException {
+        return serveIndexHtml();
     }
 
-    @GetMapping(
-            "/{path:^(?!api|static|pipeline|pdfjs|pdfjs-legacy|pdfium|vendor|fonts|images|css|js|assets|locales|modern-logo|classic-logo|Login|og_images|samples)[^\\.]*}/{subpath:^(?!.*\\.).*$}")
-    public ResponseEntity<String> forwardNestedPaths(HttpServletRequest request)
+    // Two-segment SPA routes (e.g. /tools/merge, /files/<uuid>). Both segments are constrained to
+    // be
+    // dot-less, so asset requests like /assets/index-abc.js (subpath carries a '.') fall through to
+    // the static-resource handler instead of being answered with index.html.
+    @GET
+    @Path("/{path:[^/.]+}/{subpath:[^/.]+}")
+    @Produces(MediaType.TEXT_HTML)
+    public Response forwardNestedPaths(
+            @PathParam("path") String path, @PathParam("subpath") String subpath)
             throws IOException {
-        return serveIndexHtml(request);
+        return serveIndexHtml();
     }
 
     private String buildFallbackHtml() {
         String baseUrl = contextPath.endsWith("/") ? contextPath : contextPath + "/";
 
         // Escape for HTML attribute context
-        String escapedBaseUrlHtml = HtmlUtils.htmlEscape(baseUrl);
+        String escapedBaseUrlHtml = htmlEscape(baseUrl);
 
         // Escape for JavaScript string context
-        String escapedBaseUrlJs = JavaScriptUtils.javaScriptEscape(baseUrl);
+        String escapedBaseUrlJs = javaScriptEscape(baseUrl);
 
         String serverUrl = "(window.location.origin + '" + escapedBaseUrlJs + "')";
         return """
@@ -278,10 +335,10 @@ public class ReactRoutingController {
         String baseUrl = contextPath.endsWith("/") ? contextPath : contextPath + "/";
 
         // Escape for HTML attribute context
-        String escapedBaseUrlHtml = HtmlUtils.htmlEscape(baseUrl);
+        String escapedBaseUrlHtml = htmlEscape(baseUrl);
 
         // Escape for JavaScript string context
-        String escapedBaseUrlJs = JavaScriptUtils.javaScriptEscape(baseUrl);
+        String escapedBaseUrlJs = javaScriptEscape(baseUrl);
 
         String serverUrl = "(window.location.origin + '" + escapedBaseUrlJs + "')";
         return """
@@ -518,5 +575,53 @@ public class ReactRoutingController {
                 </html>
                 """
                 .formatted(escapedBaseUrlHtml, serverUrl);
+    }
+
+    // Local replacements for the former Spring HtmlUtils/JavaScriptUtils escapers (no Quarkus or
+    // Jakarta equivalent and commons-text is not a dependency). These mirror the subset of behavior
+    // required for the context-path string injected into the fallback/callback HTML.
+    private static String htmlEscape(String input) {
+        if (input == null) {
+            return "";
+        }
+        StringBuilder sb = new StringBuilder(input.length());
+        for (int i = 0; i < input.length(); i++) {
+            char c = input.charAt(i);
+            switch (c) {
+                case '&' -> sb.append("&amp;");
+                case '<' -> sb.append("&lt;");
+                case '>' -> sb.append("&gt;");
+                case '"' -> sb.append("&quot;");
+                case '\'' -> sb.append("&#39;");
+                default -> sb.append(c);
+            }
+        }
+        return sb.toString();
+    }
+
+    private static String javaScriptEscape(String input) {
+        if (input == null) {
+            return "";
+        }
+        StringBuilder sb = new StringBuilder(input.length());
+        for (int i = 0; i < input.length(); i++) {
+            char c = input.charAt(i);
+            switch (c) {
+                case '"' -> sb.append("\\\"");
+                case '\'' -> sb.append("\\'");
+                case '\\' -> sb.append("\\\\");
+                case '/' -> sb.append("\\/");
+                case '\n' -> sb.append("\\n");
+                case '\r' -> sb.append("\\r");
+                case '\t' -> sb.append("\\t");
+                case '\b' -> sb.append("\\b");
+                case '\f' -> sb.append("\\f");
+                case '<' -> sb.append("\\u003C");
+                case '>' -> sb.append("\\u003E");
+                case '&' -> sb.append("\\u0026");
+                default -> sb.append(c);
+            }
+        }
+        return sb.toString();
     }
 }
